[FIX] Wikitopline, replacing dropdown-menu hardcoded alignment class for a...

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -124,6 +124,9 @@ a.fc-event:hover {
 .dropdown-menu .dropdown-title, .dropdown-menu li label {
   color: #212529;
 }
+.dropdown-menu {
+  text-align: start !important;
+}
 .thumbinfosothers {
   color: #e9ecef;
 }
@@ -3546,7 +3549,7 @@ body > .ui-front {
   padding-right: 2.5em;
 }
 .sf-arrows .sf-with-ul:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   right: 1em;
@@ -3721,7 +3724,7 @@ div.form-group label.error {
   position: relative;
   display: flex;
   display: -webkit-flex;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 .form-v4-content h2 {
   font-weight: 700;
@@ -3786,7 +3789,7 @@ div.form-group label.error {
   -webkit-outline: none;
   -o-outline: none;
   -ms-outline: none;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   color: #333;
   box-sizing: border-box;
@@ -5205,7 +5208,7 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
     margin-right: 0;
   }
 }
-#tiki-admin_oauthserver input[name="id"][value=''] ~ .form-group-client_id, #tiki-admin_oauthserver input[name="id"][value=''] ~ .form-group-client_secret {
+#tiki-admin_oauthserver input[name="id"][value=""] ~ .form-group-client_id, #tiki-admin_oauthserver input[name="id"][value=""] ~ .form-group-client_secret {
   display: none;
 }
 /* Smartmenus quick fix */
@@ -5303,7 +5306,7 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
   color: lightgrey;
   background: #f1f1f1;
   padding: 10px;
-  content: '';
+  content: "";
   font-family: "Font Awesome 5 Free";
   /* font-weight: 900; */
   font-size: 3rem;
@@ -5311,43 +5314,5 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-}
-
-/* phones, 600px and down */
-@media only screen and (max-width: 480px) {
-  .no_display_on_mobile {
-    display: none !important
-  }
-}
-
-/* tablets and large phones, 480px and up) */
-@media only screen and (min-width: 480px) and (max-width: 768px){
-  .no_display_on_tablet{
-    display: none !important;
-  }
-} 
-
-
-/* laptops 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 1024px){
-  .no_display_on_laptop{
-    display: none !important;
-  }
-} 
-
-/* desktops, 992px and up) */
-@media only screen and (min-width: 1024px) {
-  .no_display_on_desktop {
-    display: none !important
-  }
-}
-
-@media print {
-  .no_display_on_print {
-    display: none !important
-  }
-  .display_on_print nav {
-    display: contents !important
-  }
 }
 /* End of file */
